<?xml version="1.0"?>
<package format="3">
  <name>jaka_kargo_driver</name>
  <version>0.0.0</version>
  <description>The jaka_kargo_driver package</description>

  <!-- Maintainer information -->
  <maintainer email="meddy@todo.todo">meddy</maintainer>
  
  <!-- License information -->
  <license>TODO</license>

<!-- Dependencies for ROS2 -->  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>jaka_kargo_msgs</build_depend>

  <build_export_depend>rclcpp</build_export_depend>
  <build_export_depend>rclpy</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>  
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>jaka_kargo_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <build_type>ament_cmake</build_type>
  </export>
  
</package>
